--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "lanfiatech-dash",
   "version": "0.1.0",
-  "engines": { 
-  "node": "16.15.0",
-  "npm": "8.5.5"
-  },
   "private": true,
   "dependencies": {
     "@coreui/chartjs": "^3.0.0",
@@ -41,6 +37,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "simplebar-react": "^2.3.7",
+    "use-effect-x": "^0.1.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
